feature: add /metrics/voters path in the swagger
