# src/config/swagger-internal.json
@@ -297,6 +297,69 @@
         }
       }
     },
+    "/metrics/voters/startDate={startDate}&endDate={endDate}": {
+      "get": {
+        "summary": "Returns the number of times each voters",
+        "tags": ["metrics"],
+        "security": [
+          {
+            "ProjectAPIKey": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "startDate",
+            "in": "path",
+            "description": "The start date of period",
+            "required": true,
+            "type": "string",
+            "example": "2021-12-01"
+          },
+          {
+            "name": "endDate",
+            "in": "path",
+            "description": "The end date of period",
+            "required": true,
+            "type": "string",
+            "example": "2022-01-01"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A JSON containing the number of times each voters votes in the period",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/VoterCount"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Request params are not correct",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Authorization information is missing or invalid",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/proofs": {
       "get": {
         "summary": "Returns the latest block height and proofs for a given set of leaf keys",
@@ -1435,6 +1498,52 @@
               "type": "string",
               "example": "GET"
             }
+          }
+        }
+      },
+      "VoterCount": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "example": "0xca8d98e14e188c03edee74b2f52664bdf6804dbb36828484793f41817f590b78"
+            },
+            "count": {
+              "type": "number",
+              "example": "12"
+            }
+          }
+        },
+        "properties": {
+          "proof": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "hex",
+              "example": "0xca8d98e14e188c03edee74b2f52664bdf6804dbb36828484793f41817f590b78"
+            }
+          },
+          "_id": {
+            "type": "string",
+            "example": "block::169269::leaf::SUSHI-USDT"
+          },
+          "blockId": {
+            "type": "number",
+            "example": "169269"
+          },
+          "key": {
+            "type": "string",
+            "example": "SUSHI-USDT"
+          },
+          "__v": {
+            "type": "number"
+          },
+          "value": {
+            "type": "string",
+            "format": "hex",
+            "example": "0x0000000000000000000000000000000000000000000000005b50db233e120000"
           }
         }
       },
